--- a/package.json
+++ b/package.json
@@ -9,10 +9,31 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@motify/components": "^0.18.0",
+    "@react-navigation/bottom-tabs": "^6.5.4",
+    "@react-navigation/drawer": "^6.5.8",
+    "@react-navigation/native": "^6.1.3",
+    "@react-navigation/stack": "^6.3.12",
     "expo": "~47.0.12",
     "expo-status-bar": "~1.4.2",
+    "firebase": "^9.17.1",
+    "hermes-engine": "^0.5.2-rc1",
+    "i18next": "^22.4.9",
+    "moti": "^0.22.0",
     "react": "18.1.0",
-    "react-native": "0.70.5"
+    "react-event-listener": "^0.6.6",
+    "react-i18next": "^12.1.5",
+    "react-native": "0.70.5",
+    "react-native-calendars": "^1.1293.0",
+    "react-native-event-listeners": "^1.0.7",
+    "react-native-gesture-handler": "~2.8.0",
+    "react-native-reanimated": "~2.12.0",
+    "react-native-safe-area-context": "4.4.1",
+    "react-native-screens": "~3.18.0",
+    "react-native-select-dropdown": "^3.2.1",
+    "react-native-svg": "13.4.0",
+    "react-native-switch-selector": "^2.3.0",
+    "victory-native": "^36.6.8"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
